fixed spacing hopefully

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@
 }
 
 .content .content-p p {
-	padding: 20px;
+	padding: 100px;
 	font-size: 20px;
 }
 
